@@ -1,0 +1,35 @@
+#!/bin/sh
+../parsekey "1jn.2.3"
+../parsekey "1 jn.2.3"
+../parsekey "Ijn.2.3"
+../parsekey "I jn.2.3"
+../parsekey "1jn 2.3"
+../parsekey "1 jn 2.3"
+../parsekey "Ijn 2.3"
+../parsekey "I jn 2.3"
+../parsekey "1jn.2:3"
+../parsekey "1 jn.2:3"
+../parsekey "Ijn.2:3"
+../parsekey "I jn.2:3"
+../parsekey "1jn 2:3"
+../parsekey "1 jn 2:3"
+../parsekey "Ijn 2:3"
+../parsekey "I jn 2:3"
+
+../parsekey "1.jn.2.3"
+../parsekey "1. jn.2.3"
+../parsekey "I.jn.2.3"
+../parsekey "I. jn.2.3"
+../parsekey "1.jn 2.3"
+../parsekey "1. jn 2.3"
+../parsekey "I.jn 2.3"
+../parsekey "I. jn 2.3"
+../parsekey "1.jn.2:3"
+../parsekey "1. jn.2:3"
+../parsekey "I.jn.2:3"
+../parsekey "I. jn.2:3"
+../parsekey "1.jn 2:3"
+../parsekey "1. jn 2:3"
+../parsekey "I.jn 2:3"
+../parsekey "I. jn 2:3"
+
